<resources>
    <string name="app_name">MyLocation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="insert">insert</string>
    <string name="empty">No location record.</string>
    <string name="title_activity_insert_location">InsertLocationActivity</string>
    <string name="desc">Description</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="locate">Locate</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="insert_route">http://bait2073.comli.com/insert_route.php</string>
    <string name="insert_route_detail">http://bait2073.comli.com/insert_route_detail.php</string>
    <string name="title_activity_save_route">SaveRouteActivity</string>
    <string name="id">ID</string>
    <string name="current">Current Location:</string>
    <string name="near">Near to:</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_bus">Show Bus</string>
    <string name="gps_on">GPS</string>
</resources>
