<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_insert"
        android:title="@string/insert"
        android:icon="@drawable/ic_action_insert"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/ic_action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_locate"
        android:title="@string/locate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bus"
        android:title="@string/show_bus"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
